Opened 18 years ago
Closed 18 years ago
#850 closed bug (fixed)
crash in BPrivate::ConvertBits
Reported by: | diver | Owned by: | mmlr |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | stippi | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
app_server crashed while trying to load screensaver "TextFader":
Attachments (1)
Change History (7)
by , 18 years ago
Attachment: | app_server_crash_11.PNG added |
---|
comment:3 by , 18 years ago
Owner: | changed from | to
---|
comment:4 by , 18 years ago
Cc: | added; removed |
---|---|
Description: | modified (diff) |
Milestone: | → R1 |
Summary: | [app_server] crash in BPrivate::ConvertBits → crash in BPrivate::ConvertBits |
comment:5 by , 18 years ago
Status: | new → assigned |
---|
Crashing bug fixed in hrev19626. There remains an endless loop when using the TextFader therefore I'll leave this bug open.
comment:6 by , 18 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
The endless loop has the same cause as bug #969 and will be tracked there. I'll therefore close this bug as fixed.
Note:
See TracTickets
for help on using tickets.
back trace